# hurdygurdy

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  CODING_GUIDELINES.md  CONTENTS.md  LICENSE.md  MIGRATION_GUIDE.md  MIGRATION_PLAN.md  Makefile  PLAN.md  README.md  ]  build.bat  build.sh  build_demo.sh  build_dependencies.bat  build_dependencies.sh  compile_flags.txt  flake.nix  gpu_test.md  imgui.ini  post_process.frag  run.sh
.opencode/skills/write-tests/: SKILL.md
assets/: test.json  test.txt  test_skybox.clip
cmake/: prefer-clang.cmake
demo/: main.c  main.cpp  main_2d.c  main_3d.c  main_comp.c  main_rm.c  test.frag  test.vert
include/: hg_2d_renderer.h  hg_3d_renderer.h  hg_allocator.h  hg_assets.h  hg_assets.hpp  hg_audio.hpp  hg_concurrency.hpp  hg_containers.hpp  hg_core.hpp  hg_depth_renderer.h  hg_ecs.hpp  hg_engine.h  hg_enums.h  hg_events.h  hg_external.h  hg_generate.h  hg_gpu.hpp  hg_graphics.h  hg_graphics2.h  hg_graphics_enums.h  hg_init.h  hg_input.h  hg_library.hpp  hg_load.h  hg_math.h  hg_math.hpp  hg_memory.h  hg_memory.hpp  hg_mesh.h  hg_model_pipeline.h  hg_pbr_pipeline.h  hg_pch.h  hg_pipeline.h  hg_platform.hpp  hg_ray_marcher.h  hg_renderer.h  hg_rendering.hpp  hg_rendering_engine.h  hg_serialization.hpp  hg_strings.hpp  (+16 more)
shaders/: antialias.frag  color_grading.frag  fullscreen.vert  model.frag  model.vert  pbr.frag  pbr.vert  post_process.frag  skybox.frag  skybox.vert  sprite.frag  sprite.vert  test.frag  test.vert  tonemap.frag
src/: any_array.cpp  arena.cpp  bindless.glsl  concurrency.cpp  debug2d.frag  ecs.cpp  editor.cpp  embed.c  embed.cpp  embed_file.c  embed_file.cpp  external.cpp  glfw.cpp  hg_2d_renderer.c  hg_3d_renderer.c  hg_assets.cpp  hg_audio.cpp  hg_concurrency.cpp  hg_containers.cpp  hg_core.cpp  hg_depth.frag  hg_depth.vert  hg_depth_renderer.c  hg_ecs.cpp  hg_embed_file.c  hg_engine.cpp  hg_events.c  hg_generate.cpp  hg_gpu.cpp  hg_graphics.c  hg_graphics_internal.h  hg_init_internal.h  hg_internal.h  hg_load.cpp  hg_math.c  hg_math.cpp  hg_mesh.cpp  hg_model.frag  hg_model.vert  hg_model_pipeline.cpp  (+90 more)
